Add Asciidoc support.
	Asciidoc is a very simple markup language that supports source
	highlighting and can embed mathematical formula.
	It also generates much more beautiful documents than
	manually-written HTML pages.
	On Fedora, install it using: yum install -y asciidoc source-highlight

	* configure.ac: Do not generate autotools.html anymore.
	* doc/Makefile.am: Add Asciidoc compilation rule, fix filename lists.
	* doc/algorithm.html.in: Use images instead of pictures.
	* doc/autotools.html.in: Remove.
	* doc/autotools.txt: New.
	* doc/corba.html.in: Use images instead of pictures.
	* doc/develop.html.in: Use images instead of pictures.
	* doc/graph-dependency.html.in: Use images instead of pictures.
	* doc/images/archi.png: Rename from doc/pictures/archi.png.
	* doc/images/doxygen.png: Rename from doc/pictures/doxygen.png.
	* doc/images/film.png: Rename from doc/pictures/film.png.
	* doc/images/footer.jpg: Rename from doc/pictures/footer.jpg.
	* doc/images/ftv2blank.png: Rename from doc/pictures/ftv2blank.png.
	* doc/images/ftv2doc.png: Rename from doc/pictures/ftv2doc.png.
	* doc/images/ftv2folderclosed.png:
	Rename from doc/pictures/ftv2folderclosed.png.
	* doc/images/ftv2folderopen.png:
	Rename from doc/pictures/ftv2folderopen.png.
	* doc/images/ftv2lastnode.png:
	Rename from doc/pictures/ftv2lastnode.png.
	* doc/images/ftv2link.png: Rename from doc/pictures/ftv2link.png.
	* doc/images/ftv2mlastnode.png:
	Rename from doc/pictures/ftv2mlastnode.png.
	* doc/images/ftv2mnode.png: Rename from doc/pictures/ftv2mnode.png.
	* doc/images/ftv2node.png: Rename from doc/pictures/ftv2node.png.
	* doc/images/ftv2plastnode.png:
	Rename from doc/pictures/ftv2plastnode.png.
	* doc/images/ftv2pnode.png: Rename from doc/pictures/ftv2pnode.png.
	* doc/images/ftv2vertline.png:
	Rename from doc/pictures/ftv2vertline.png.
	* doc/images/graph_legend.png:
	Rename from doc/pictures/graph_legend.png.
	* doc/images/icons/README: New.
	* doc/images/icons/callouts/1.png: New.
	* doc/ima

--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -9,13 +9,13 @@ graphDep.dot: $(top_builddir)/config.status
 	$(top_srcdir)/scripts/packageDep -o graphDep.dot $(PKG_LIST)
 	sed -i 's/size = "12,15"//' graphDep.dot
 
-pictures/dependencies.png: graphDep.dot
-	mkdir -p pictures
-	dot -o pictures/dependencies.png -Tpng graphDep.dot
+images/dependencies.png: graphDep.dot
+	mkdir -p images
+	dot -o images/dependencies.png -Tpng graphDep.dot
 
 CLEANFILES +=				\
 	graphDep.dot			\
-	pictures/dependencies.png
+	images/dependencies.png
 
 
 # Generate pages for missing packages.
@@ -28,6 +28,25 @@ CLEANFILES +=				\
 BUILT_SOURCES = $(MISSING_FILES)
 CLEANFILES += $(MISSING_FILES)
 
+# Graph dependency.
+# Replace the special tag ``@MAP@'' by the dot generated map.
+graphDep.html: graphDep.dot
+	dot -o graphDep.html -Tcmapx graphDep.dot
+
+graph-dependency.html: graph-dependency.html.in graphDep.html
+	MAP=`tr -d '\n' < graphDep.html`; \
+	sed "s|@MAP@|$$MAP|" "$<" > $@
+
+EXTRA_DIST += $(DOC_EXTRA)		\
+	graph-dependency.html.in	\
+	cmaxp.html
+
+
+# Asciidoc pages.
+SUFFIXES += .html
+.txt.html:
+	asciidoc -a icons -o $@ $<
+
 # Distribute all files (HTML, images, videos...).
 DOC_EXTRA =				\
 	custom.css			\
@@ -36,28 +55,53 @@ DOC_EXTRA =				\
 	figures/kppInterfaceWalk.png	\
 	movies/passing-under.mp4	\
 	movies/whole-body.mp4		\
-	pictures/dependencies.png	\
-	pictures/film.png		\
-	pictures/footer.jpg		\
-	pictures/ftv2blank.png		\
-	pictures/ftv2doc.png		\
-	pictures/ftv2folderclosed.png	\
-	pictures/ftv2folderopen.png	\
-	pictures/ftv2lastnode.png	\
-	pictures/ftv2link.png		\
-	pictures/ftv2mlastnode.png	\
-	pictures/ftv2mnode.png		\
-	pictures/ftv2node.png		\
-	pictures/ftv2plastnode.png	\
-	pictures/ftv2pnode.png		\
-	pictures/ftv2vertline.png	\
-	pictures/graph_legend.png	\
-	pictures/passing-under.jpg	\
-	pictures/tab_b.gif		\
-	pictures/tab_l.gif		\
-	pictures/tab_r.gif		\
-	pictures/walk.png		\
-	pictures/whole-body.png		\
+	images/dependencies.png		\
+	images/film.png			\
+	images/footer.jpg		\
+	images/ftv2blank.png		\
+	images/ftv2doc.png		\
+	images/ftv2folderclosed.png	\
+	images/ftv2folderopen.png	\
+	images/ftv2lastnode.png		\
+	images/ftv2link.png		\
+	images/ftv2mlastnode.png	\
+	images/ftv2mnode.png		\
+	images/ftv2node.png		\
+	images/ftv2plastnode.png	\
+	images/ftv2pnode.png		\
+	images/ftv2vertline.png		\
+	images/graph_legend.png		\
+	images/icons/callouts/1.png	\
+	images/icons/callouts/2.png	\
+	images/icons/callouts/3.png	\
+	images/icons/callouts/4.png	\
+	images/icons/callouts/5.png	\
+	images/icons/callouts/6.png	\
+	images/icons/callouts/7.png	\
+	images/icons/callouts/8.png	\
+	images/icons/callouts/9.png	\
+	images/icons/callouts/10.png	\
+	images/icons/callouts/11.png	\
+	images/icons/callouts/12.png	\
+	images/icons/callouts/13.png	\
+	images/icons/callouts/14.png	\
+	images/icons/callouts/15.png	\
+	images/icons/caution.png	\
+	images/icons/example.png	\
+	images/icons/home.png		\
+	images/icons/important.png	\
+	images/icons/next.png		\
+	images/icons/note.png		\
+	images/icons/prev.png		\
+	images/icons/tip.png		\
+	images/icons/up.png		\
+	images/icons/warning.png	\
+	images/passing-under.jpg	\
+	images/tab_b.gif		\
+	images/tab_l.gif		\
+	images/tab_r.gif		\
+	images/walk.png			\
+	images/whole-body.png		\
 	tabs.css
 
 nobase_html_DATA =			\
@@ -75,17 +119,3 @@ nobase_html_DATA =			\
 
 nobase_html_DATA += $(MISSING_FILES) $(DOC_EXTRA)
 
-EXTRA_DIST += $(DOC_EXTRA)		\
-	graph-dependency.html.in
-
-# Graph dependency.
-# Replace the special tag ``@MAP@'' by the dot generated map.
-graphDep.html: graphDep.dot
-	dot -o graphDep.html -Tcmapx graphDep.dot
-
-graph-dependency.html: graph-dependency.html.in graphDep.html
-	MAP=`tr -d '\n' < graphDep.html`; \
-	sed "s|@MAP@|$$MAP|" "$<" > $@
-
-CLEANFILES +=				\
-	cmaxp.html
