--- a/doc/corba.html.in
+++ b/doc/corba.html.in
@@ -22,7 +22,7 @@
     <br><br>
     <hr>
     <center>
-      <img src="pictures/footer.jpg" height="100" alt="footer"><br>
+      <img src="images/footer.jpg" height="100" alt="footer"><br>
       Humanoid Path Planner documentation<br>
     </center>
   </body>
