--- a/doc/develop.html.in
+++ b/doc/develop.html.in
@@ -303,7 +303,7 @@ Access to these attributes can be controlled through protected or public access 
 <br><br>
 <hr>
 <center>
-  <img src="pictures/footer.jpg" height="100" alt="footer"><br>
+  <img src="images/footer.jpg" height="100" alt="footer"><br>
   Humanoid Path Planner documentation<br>
 </center>
 </body>
