--- a/doc/missing.html.in
+++ b/doc/missing.html.in
@@ -25,7 +25,7 @@
     documentation to activate the link to @PACKAGE_NAME@.</h4>
     <hr>
     <div style="text-align: center">
-      <img src="../../pictures/footer.jpg" height="100" alt="footer"><br>
+      <img src="../../images/footer.jpg" height="100" alt="footer"><br>
       Humanoid Path Planner documentation<br>
     </div>
     <hr>
