--- a/doc/install.html.in
+++ b/doc/install.html.in
@@ -221,7 +221,7 @@ You can of course add obstacles using Corba Client obstacleClient  <br><br>
 
  <hr>
  <center>
-   <img src="./pictures/footer.jpg" Height=100>
+   <img src="./images/footer.jpg" Height=100>
  <br>Humanoid Path Planner documentation</br>
  </center>
  <hr>
