--- a/doc/robotic-component.html.in
+++ b/doc/robotic-component.html.in
@@ -52,7 +52,7 @@
     <br><br>
     <hr>
     <center>
-      <img src="pictures/footer.jpg" height="100" alt="footer"><br>
+      <img src="images/footer.jpg" height="100" alt="footer"><br>
       Humanoid Path Planner documentation<br>
     </center>
   </body>
