Factorize asciidoc rules.
	Search for asciidoc, source-highlight.
	Asciidoc syntax does not seem to be retrocompatible, so
	for now check that version is at least 8.2.5 (Fedora 11).

	* bootstrap: Check submodule sanity.
	* build-aux: Synchronize.
	* configure.ac: Search for asciidoc manually.
	* doc/Makefile.am: Use factorized asciidoc rules.

Signed-off-by: Thomas Moulard <thomas.moulard@gmail.com>

--- a/configure.ac
+++ b/configure.ac
@@ -26,9 +26,11 @@ AC_CONFIG_MACRO_DIR([build-aux])
 # Search for install.
 AC_PROG_INSTALL
 
+# Check for asciidoc.
+JRL_PROG_ASCIIDOC([ASCIIDOC], [8.2.5])
+
 # Search for pkg-config.
 PKG_PROG_PKG_CONFIG
-
 
 
 # Macro that search for a package's documentation and
