Remove spurious EXTRA_FILES.
	* doc/Makefile.am: Remove cmaxp.html from EXTRA_DIST
	as this generated file should not be distributed.

Signed-off-by: Thomas Moulard <thomas.moulard@gmail.com>

--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -39,8 +39,7 @@ graph-dependency.html: graph-dependency.html.in graphDep.html
 	sed "s|@MAP@|$$MAP|" "$<" > $@
 
 EXTRA_DIST += $(DOC_EXTRA)		\
-	graph-dependency.html.in	\
-	cmaxp.html
+	graph-dependency.html.in
 
 # Distribute all files (HTML, images, videos...).
 DOC_EXTRA =				\
