--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -99,6 +99,12 @@ DOC_EXTRA =				\
 	images/whole-body.png		\
 	tabs.css
 
+# Distribute all files (HTML, images, videos...).
+DOC_EXTRA +=				\
+	autotools.txt			\
+	develop.txt			\
+	install.txt
+
 nobase_html_DATA =			\
 	algorithm.html			\
 	autotools.html			\
@@ -114,3 +120,10 @@ nobase_html_DATA =			\
 	tree.html
 
 nobase_html_DATA += $(MISSING_FILES) $(DOC_EXTRA)
+
+CLEANFILES +=				\
+	graphDep.html			\
+	install.html			\
+	graph-dependency.html		\
+	autotools.html			\
+	develop.html
