Fix some broken links
	* configure.ac,
	* doc/algorithm.html.in,
	* doc/kpp-interface.html.in.

--- a/configure.ac
+++ b/configure.ac
@@ -78,10 +78,10 @@ JRL_GENERATELINK([KPPINTERFACE], [kppInterface])
 JRL_GENERATELINK([KPPINTERFACEWALK], [kpp-interfacewalk])
 JRL_GENERATELINK([KPPINTERFACEHRP], [kppInterfaceHRP])
 JRL_GENERATELINK([KPPINTERFACECMP], [kppInterfaceCmp])
-JRL_GENERATELINK([HPPGIK], [hppGik])
-JRL_GENERATELINK([HPPHIK], [hpphik])
+JRL_GENERATELINK([HPPGIK], [hpp-gik])
+JRL_GENERATELINK([HPPHIK], [hpp-hik])
 JRL_GENERATELINK([HPPLOA], [hppLoa])
-JRL_GENERATELINK([HPPLOCALSTEPPER], [hpplocalstepper])
+JRL_GENERATELINK([HPPLOCALSTEPPER], [hpp-localstepper])
 JRL_GENERATELINK([HPPLOAPLANNER], [hppLoaPlanner])
 JRL_GENERATELINK([HPPTIMINGPLANNER], [hppTimingPlanner])
 JRL_GENERATELINK([DYNAMICSJRLJAPAN], [dynamicsJRLJapan])
