--- a/doc/kpp-interface.html.in
+++ b/doc/kpp-interface.html.in
@@ -12,7 +12,7 @@
   <p>
     <ul>
       <li><a href="@KPPINTERFACE_LINK@">kppInterface</a>: basic KPP interface.</li>
-      <li><a href="@KPPINTERFACEWALK_LINK@">kppInterfaceWalk</a>: KPP interface for hppWalkPlanner.</li>
+      <li><a href="@KPPINTERFACEWALK_LINK@">kpp-interfacewalk</a>: KPP interface for hppWalkPlanner.</li>
       <li><a href="@KPPINTERFACEHRP_LINK@">kppInterfaceHRP</a>: KPP interface for functions specific to HRP2 robot.</li>
       <li><a href="@KPPINTERFACECMP_LINK@">kppInterfaceCmp</a>: KPP interface for contact motion planning.</li>
       <li><a href="@KPPINTERFACETUTORIAL_LINK@">kppInterfaceTutorial</a>: KPP interface to learn how to make and use a KPP interface.</li>
