Fix detection of StackOfTasks
	* configure.ac: stackoftasks -> StackOfTasks.

--- a/configure.ac
+++ b/configure.ac
@@ -100,7 +100,7 @@ JRL_GENERATELINK([WALKPLANNERORTMCLIENT], [walkPlannerOrtmClient])
 JRL_GENERATELINK([ROBOPTIMCORE], [roboptim-core])
 JRL_GENERATELINK([ROBOPTIMPOSTURE], [roboptim-posture])
 JRL_GENERATELINK([ROBOPTIMTRAJECTORY], [roboptim-trajectory])
-JRL_GENERATELINK([SOT], [stackoftasks])
+JRL_GENERATELINK([SOT], [StackOfTasks])
 
 JRL_GENERATELINK([WALKGENOM], [walk-genom])
 
