Update to new hpp-corbaserver.
       * configure.ac.

--- a/configure.ac
+++ b/configure.ac
@@ -72,7 +72,7 @@ JRL_GENERATELINK([KWSPLUS], [kwsPlus])
 JRL_GENERATELINK([HPPMODEL], [hppModel])
 JRL_GENERATELINK([HPPCORE], [hppCore])
 JRL_GENERATELINK([WALKGENJRL], [walkGenJrl])
-JRL_GENERATELINK([HPPCORBASERVER], [hppCorbaServer])
+JRL_GENERATELINK([HPPCORBASERVER], [hpp-corbaserver])
 JRL_GENERATELINK([HPPPYTHON], [hppPython])
 JRL_GENERATELINK([HPPWALKFOOTPLANNER], [hpp-walkfootplanner])
 JRL_GENERATELINK([HPPWALKPLANNER], [hpp-walkplanner])
