Update to new package name hppPython -> hpp-python.

--- a/configure.ac
+++ b/configure.ac
@@ -73,7 +73,7 @@ JRL_GENERATELINK([HPPMODEL], [hppModel])
 JRL_GENERATELINK([HPPCORE], [hppCore])
 JRL_GENERATELINK([WALKGENJRL], [walkGenJrl])
 JRL_GENERATELINK([HPPCORBASERVER], [hpp-corbaserver])
-JRL_GENERATELINK([HPPPYTHON], [hppPython])
+JRL_GENERATELINK([HPPPYTHON], [hpp-python])
 JRL_GENERATELINK([HPPWALKFOOTPLANNER], [hpp-walkfootplanner])
 JRL_GENERATELINK([HPPWALKPLANNER], [hpp-walkplanner])
 JRL_GENERATELINK([HPPHYBRIDROBOT], [hppHybridRobot])
